# notology-og

./: .gitignore  package-lock.json  package.json  tailwind.config.ts
ai/: message.tsx
app/: editor-defaults.ts  globals.css  layout.tsx  page.tsx  prosemirror.css
app/(main)/: layout.tsx
app/(main)/[subjectId]/: page.tsx
app/(main)/[subjectName]/: page.tsx
app/(main)/_components/: chatbot.tsx  doc-banner.tsx  doc-navbar.tsx  item.tsx  logo-item.tsx  navbar.tsx  navigation.tsx  new-subject-button.tsx  sidebar-list.tsx  subject-card.tsx  subject-combobox.tsx  title.tsx  user-item.tsx
app/(main)/home/: page.tsx
app/(main)/subjects/: page.tsx
app/(marketing)/: layout.tsx  page.tsx
app/(marketing)/_components/: heading.tsx  hero-section.tsx  (+4 more)
backend/: ingestion.py  main.py  pyproject.toml  rag_chain.py  server.py  types.py
backend/ingestion/: index.py  ingest.py  main.py  upsert.py
backend/notology/: chain.py  chat_types.py  main.py  rag_chain.py  server.py  types.py
backend/notology/ingestion/: ingest.py
backend/notology/tools/: retriever.py  test_retriever.py
backend/tools/: retriever.py  test_retriever.py  tools.py
components/: chat.tsx  message.tsx  rag-ui.tsx  search-command.tsx  site-header.tsx  toolbar.tsx
components/chatbot/: chat-header.tsx  chat.tsx  text-input.tsx
components/editor/: advanced-editor.tsx  extensions.ts  slash-command.tsx
components/landing/: client-section.tsx  hero-section.tsx
components/magicui/: sphere-mask.tsx
components/modals/: settings-modal.tsx
components/providers/: convex-provider.tsx  modal-provider.tsx
components/ui/: dialog.tsx
convex/: auth.config.ts  classes.ts  documents.ts  files.ts  schema.ts  subjects.ts
convex/_generated/: api.d.ts
hooks/: use-search.tsx  use-settings.tsx
lib/: s3-loader.ts  s3.ts
styles/: prosemirror.css
styles/partials/: lists.css  typography.css
utils/: client.tsx  server.tsx
(+27 files in other folders)
